[package]
name = "gcomm"
version = "0.1.0"
edition = "2021"
authors = ["Bryson Tang <brysontang@gmail.com>"]
description = "Generate AI-powered Git commit messages from staged changes using a local Ollama model."
license = "MIT"
repository = "https://github.com/bryson-tang/gcomm"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clipboard = "0.5.0"