[package]
name = "gcomm"
version = "0.1.4"
edition = "2021"
authors = ["Bryson Tang <brysontang@gmail.com>"]
description = "Generate AI-powered Git commit messages from staged changes using a local Ollama model."
license = "MIT"
repository = "https://github.com/brysontang/gcomm"
readme = "README.md"
keywords = ["git", "cli", "commit", "ai", "ollama"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clipboard = "0.5.0"

[package.metadata]
thanks = ["Built with help from ChatGPT"]